# job-intelligence-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
config/: profiles.json  providers.json  scoring.v1.json
data/: candidate_profile.json  openai_enriched_jobs.json  openai_labeled_jobs.json  openai_raw_jobs.json
docs/: ARCHITECTURE.md  CANDIDATES.md  CI_SMOKE_GATE.md  DETERMINISM_CONTRACT.md  ECS_RUNBOOK.md  EKS_PROOF_RUN.md  LEGALITY_AND_ETHICS.md  LEGAL_POSITIONING.md  MODEL_STRATEGY.md  OPERATIONS.md  OPS_RUNBOOK.md  PROOF_RUN_CHECKLIST.md  PROVIDERS.md  RELEASE_PROCESS.md  ROADMAP.md  RUN_REPORT.md  SEMANTIC_SAFETY_NET.md  THOUGHTS.md
review_pack/: 00_OVERVIEW.md  01_TREE.md  02_CONFIG.md  10_PIPELINE.md  11_INTEGRATIONS.md  12_SCORING.md  13_TESTS.md  90_MISC.md  99_CHANGELOG.md
schemas/: alerts.schema.v1.json  candidate_profile.schema.v1.json  candidate_registry.schema.v1.json  enriched_jobs.schema.v1.json  onprem_rehearsal_receipt.schema.v1.json  proof_receipt.schema.v1.json  providers.schema.v1.json  run_health.schema.v1.json  run_report.schema.v1.json  run_summary.schema.v1.json  scoring.schema.v1.json
scripts/: _bootstrap.py  add_snapshot.py  assert_snapshots_clean.sh  audit_ai_payloads.py  aws_bootstrap_prod.py  aws_debug_latest.py  aws_deploy_smoke.py  aws_discover_subnets.py  aws_env_check.py  aws_oneoff_run.py  aws_preflight_eks.py  aws_schedule_status.py  candidates.py  cronjob_simulate.py  cw_tail.sh  debug_parse_openai_snapshot.py  deploy_ecs_rev.sh  diff_ranked_artifacts.py  doctor.py  ecr_publish_image.sh  ecs_shape_smoke.py  ecs_verify_task.sh  enrich_jobs.py  export_requirements.py  gh_retry.sh  infra_discovery.py  k8s_render.py  onprem_rehearsal.py  preflight_env.py  print_taskdef_env.sh  proof_run_extract.py  prove_cloud_run.py  prove_eks_live_run.py  prove_it_m3.py  prove_live_scrape_eks.sh  provider_authoring.py  prune_state.py  publish_s3.py  rebuild_run_index.py  replay_run.py  (+30 more)
src/: sitecustomize.py
tests/: conftest.py  test_add_snapshot.py  test_ai_augment.py  test_ai_augment_rules.py  test_ai_extract_rules.py  test_ai_insights.py  test_ai_invariants.py  test_ai_match.py  test_ai_provider.py  test_application_kit.py  test_application_kit_md.py  test_ashby_graphql_null_jobposting.py  test_ashby_provider.py  test_ashby_provider_next_data.py  test_ashby_snapshot_determinism.py  test_audit_ai_payloads.py  test_aws_bootstrap_prod.py  test_aws_debug_latest.py  test_aws_discover_subnets.py  test_aws_env_check.py  test_aws_oneoff_run.py  test_aws_runs.py  (+147 more)
(+249 files in other folders)
