[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-intelligence-engine"
version = "0.1.0"
description = "Local job scraping + enrichment + scoring pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "pydantic",
]

[project.optional-dependencies]
dev = ["pytest", "moto[s3]>=5.1.0"]
aws = ["boto3>=1.34,<2"]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "W", "B", "C4"]
extend-select = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
