[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-intelligence-engine"
version = "0.1.0"
description = "Local job scraping + enrichment + scoring pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "boto3>=1.34,<2",
    "faiss-cpu",
    "openai",
    "pandas",
    "python-dotenv",
    "pydantic",
    "requests",
]

[project.optional-dependencies]
dev = ["pip-tools>=7.4.1", "pytest", "ruff==0.15.0", "moto[s3]>=5.1.0", "tomli; python_version < '3.11'"]
aws = ["boto3>=1.34,<2"]
dashboard = ["fastapi", "uvicorn", "streamlit"]
snapshots = ["playwright"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4"]
extend-select = []

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["B023", "B904", "C401", "E402", "E501", "F821", "F841", "W293"]
"tests/*.py" = ["C408", "E402", "E501", "F821", "F841", "W293"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
